log_output/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: dwk-mooc
  labels:
    app: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: ghcr.io/fazstrac/log_output:latest
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
